[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/gameover/HintsLayer.gd" type="Script" id=1]
[ext_resource path="res://resources/RedButtonCornerStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://resources/Button/Pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/Dosis/Dosis-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/VictoryScreen/VictoryTextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/gameover/GameOverScreen.gd" type="Script" id=6]
[ext_resource path="res://scenes/MainMenu/ScrollContainer.tres" type="Theme" id=7]
[ext_resource path="res://assets/fonts/Roboto_Condensed/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/gameover/VBoxContainer.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 42
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 42
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 42
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=3]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverScreen" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.976471, 0.968627, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = 36.0
margin_right = -41.0
margin_bottom = 224.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 667.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "RESTART"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 102.0
margin_right = 667.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "QUIT"

[node name="GetHintButton" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 204.0
margin_right = 667.0
margin_bottom = 286.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "GET A HINT $"

[node name="GetFullSolutionButton" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 204.0
margin_right = 667.0
margin_bottom = 286.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "GET THE FULL SOLUTION $"

[node name="Text" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -190.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "YOU ARE YOU.
UTO IS DEAD.
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintsLayer" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.976471, 0.968627, 0.972549, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HintsLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HintsLayer/CenterContainer"]
margin_left = 45.0
margin_top = 117.0
margin_right = 705.0
margin_bottom = 1217.0
rect_min_size = Vector2( 0, 1100 )
custom_constants/separation = 24
script = ExtResource( 9 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/HintsLayer/CenterContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 994.0
size_flags_vertical = 3
theme = ExtResource( 7 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HintsLayer/CenterContainer/VBoxContainer/ScrollContainer"]
margin_right = 660.0
margin_bottom = 994.0
mouse_filter = 1
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/HintsLayer/CenterContainer/VBoxContainer/ScrollContainer/CenterContainer"]
margin_top = 472.0
margin_right = 660.0
margin_bottom = 522.0
rect_min_size = Vector2( 660, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GotItButton" type="Button" parent="CanvasLayer/HintsLayer/CenterContainer/VBoxContainer"]
margin_top = 1018.0
margin_right = 660.0
margin_bottom = 1100.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "GOT IT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 3 )

[connection signal="pressed" from="CanvasLayer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/GetHintButton" to="." method="_on_GetHintButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/GetFullSolutionButton" to="." method="_on_GetFullSolutionButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HintsLayer/CenterContainer/VBoxContainer/GotItButton" to="CanvasLayer/HintsLayer" method="_on_GotItButton_pressed"]
